# cookie-monster-crawl

./: .gitignore  LICENSE  README.md  pyproject.toml  recipes.json  requirements.txt
cookie_monster_crawl/: __init__.py  apply.py  crawl_logger.py  crawler.py  implement.py  investigation.py  label_filtered.py  outcomes.py  parser.py  pipeline.py  priority_queue.py  replay.py  strategy.py  train.py  utils.py
data/: crawl_config.json  infrastructure_segments.txt  navigational_segments.txt  recipe_related_segments.txt  seed.json  static-target.json  test-target.json
results/: run_2026-01-28_21-44-32.json  run_2026-01-28_21-59-27.json  run_static-target_2026-01-28_21-44-32.json  run_static-target_2026-01-28_21-59-27.json  run_static-target_2026-01-29_20-56-53.json  run_static-target_2026-01-29_22-30-53.json  run_static-target_2026-01-29_22-32-20.json  run_static-target_2026-01-29_22-36-47.json  run_static-target_2026-02-02_22-18-22.json  run_static-target_2026-02-02_22-23-36.json  run_static-target_2026-02-02_22-46-40.json  run_static-target_2026-02-02_22-55-20.json  run_static-target_2026-02-02_23-30-19.json  run_static-target_2026-02-09_23-25-37.json  run_static-target_2026-02-10_23-51-12.json  run_static-target_2026-02-18_17-36-19.json  run_static-target_2026-02-18_23-39-28.json  run_static-target_2026-02-22_23-29-04.json
tests/: test_crawl_logger.py  test_crawler.py  test_crawler_log_integration.py  test_parser.py  test_url_prioritizer.py  test_utils.py
