[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cookie-monster-crawl"
version = "1.0.0"
description = "An adaptive focused web crawler that finds recipe pages with 95%+ harvest efficiency"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "beautifulsoup4>=4.14.3",
    "aiohttp>=3.13.3",
    "numpy>=2.4.1",
    "datasketch>=1.9.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
